Bug 203865 - Erasing a member from a Group in the 'Edit Contact Group' dialogue does not work properly.
Summary: Erasing a member from a Group in the 'Edit Contact Group' dialogue does not w...
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-14 19:21 UTC by Sabine Faure
Modified: 2009-08-26 20:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-08-14 19:21:03 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Create a new group with 4 members using the 'name <mail>' format when entering them.
- Reopen the 'Edit Contact Group' dialogue and erase the first member. Click on the 'ok' button.

-> An error pop up dialogue appears saying 'The contact '' is missing a name'. Click on the 'ok' button to close it.

Until you enter a new contact or move up the last member, it is impossible to close the 'Edit Contact Group' dialogue.

Additional information:
This bug is also found if you erase only the second, or only the third member of the list instead of the first one.

SVN REV 1010699
Comment 1 Tobias Koenig 2009-08-17 19:57:20 UTC
SVN commit 1012479 by tokoe:

Allow to remove contacts from the middle of the contact group editor.

BUG: 203865


 M  +3 -0      contactgroupeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1012479
Comment 2 Sabine Faure 2009-08-26 20:58:37 UTC
This has been corrected now.

Trunk, svn rev 1015767