Allow to remove contacts from the middle of the contact group editor.

BUG: 203865

svn path=/trunk/KDE/kdepim/akonadi/contact/; revision=1012479